--- a/app/Timer/timer.css
+++ b/app/Timer/timer.css
@@ -4,3 +4,111 @@
     width: 150px;
     height: 150px;
 }
+
+.start {
+    font-size: larger;
+    line-height: 100%;
+}
+
+.number {
+    font-size: larger;
+    line-height: 100%;
+}
+
+.number.input {
+    background-color: rgb(var(--dropdown-rgb));
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+.timer-option-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 22px 0 22px 0;
+}
+
+.timer-option {
+    border: thin solid;
+    border-radius: 6px;
+    padding: 2px 6px 2px 6px;
+    width: 64px;
+}
+
+.timer-option:hover {
+    opacity: 60%;
+}
+
+.timer-option.disable {
+    opacity: 60%;
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
+.popup-wrapper {
+    position: absolute;
+    width: 100svw;
+    height: 100svh;
+    top: 0;
+    right: 0;
+    backdrop-filter: blur(5px);
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.popup {
+    background-color: rgb(var(--dropdown-rgb));
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.number-input-wrapper {
+    padding: 12px 15px 12px 15px;
+}
+
+.number.input {
+    text-align: center;
+}
+
+input:focus {
+    outline: thin solid rgb(var(--border-rgb));
+    border-radius: 10px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.comment {
+    background-color: rgb(var(--dropdown-rgb));
+    width: 98%;
+    padding: 12px 15px 12px 15px;
+}
+
+.bottom-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 98%;
+    padding: 12px 15px 12px 15px;
+}
+
+.popup-button:hover {
+    opacity: 60%;
+}
