--- a/app/globals.css
+++ b/app/globals.css
@@ -37,3 +37,10 @@ body {
 .Link:hover {
     opacity: 60%;
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
