--- a/app/about/page.css
+++ b/app/about/page.css
@@ -2,5 +2,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     height: calc(100svh - var(--navbar-height));
 }
