--- a/app/my-times/time_table.css
+++ b/app/my-times/time_table.css
@@ -54,3 +54,53 @@
     width: auto;
     text-align: right;
 }
+
+.hidden { 
+    visibility: hidden;
+}
+
+.popup-wrapper {
+    position: absolute;
+    width: 100svw;
+    height: 100svh;
+    top: 0;
+    right: 0;
+    backdrop-filter: blur(5px);
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.popup {
+    background-color: rgb(var(--dropdown-rgb));
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.bottom-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 98%;
+    padding: 12px 15px 12px 15px;
+}
+
+.popup-button:hover {
+    opacity: 60%;
+}
+
+.popup-confirmation {
+    padding: 12px 15px 0 15px;
+}
+
+.popup-date {
+    padding: 12px 15px 12px 15px;
+}
